<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/preview_result_article_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/black">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/publish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="end"
            android:text="@string/publish"
            android:textColor="@color/orange_main"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/preview_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/preview_article_button"
            android:src="@drawable/ic_eye"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/redo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/redo_button"
            android:src="@drawable/ic_redo"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/undo_button"
            android:src="@drawable/ic_undo"
            app:tint="@color/black" />


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/upload_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_upload_picture"
                    android:contentDescription="@string/image_post_cd"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circulas" />

                <EditText
                    android:id="@+id/input_tittle_field"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:autofillHints=""
                    android:background="@drawable/background_line"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto_black"
                    android:hint="@string/write_title"
                    android:inputType="text"
                    android:maxLines="3"
                    android:outlineProvider="none"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_grey"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/categoryDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgorund_dropdown"
                    android:backgroundTintMode="src_in"
                    android:hapticFeedbackEnabled="false"
                    android:visibility="visible" />

                <jp.wasabeef.richeditor.RichEditor
                    android:id="@+id/editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/white"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/heading_text_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:fontFamily="@font/roboto_bold"
                            android:padding="6dp"
                            android:text="@string/heading"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/subheading_text_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:fontFamily="@font/roboto_bold"
                            android:padding="6dp"
                            android:text="@string/subheading"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp">

                        <TextView
                            android:id="@+id/bold_text_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/b"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/italic_text_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/italic"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/underline_text_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/underline"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/list_bullet_points_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:contentDescription="@string/list_bullet_points_cd"
                            android:padding="3dp"
                            app:srcCompat="@drawable/icon_list_bullet_points" />

                        <ImageView
                            android:id="@+id/list_number_points"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:contentDescription="@string/list_bullet_points_cd"
                            android:padding="3dp"
                            app:srcCompat="@drawable/icon_list_numbers" />

                        <ImageView
                            android:id="@+id/decrease_indent2"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:contentDescription="@string/descrease_indent_cd"
                            android:padding="4dp"
                            app:srcCompat="@drawable/icon_tab_back" />

                        <ImageView
                            android:id="@+id/increase_indent3"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/background_unselected_format_text"
                            android:contentDescription="@string/descrease_indent_cd"
                            android:padding="4dp"
                            android:rotation="180"
                            app:srcCompat="@drawable/icon_tab_back" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/popup_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>
