<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/black">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_button_cd"
            android:src="@drawable/baseline_delete_24"
            android:visibility="gone" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="WebViewLayout">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/image_article"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image_blank" />

            <TextView
                android:id="@+id/tittle_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/pentingnya_perawatan_kesehatan_rutin_untuk_kucing_kesayangan_anda"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/care_and_health"
                android:textColor="@color/black_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/article_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/_15_maret_2024"
                android:textColor="#A3A0A0" />

            <WebView
                android:id="@+id/article_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/related_article"
                android:textColor="@color/green_main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_related_article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:listitem="@layout/list_article" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>