...
            android:fontFamily="@font/roboto_medium"
            android:text="@string/toolbar_article"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_article_only_for_admin_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_write"
...
